Convert widthfactor to fixedwidth "25"
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41011

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -56,7 +56,7 @@
                         </div>
                     </vr-datagridcolumn>
 
-                    <vr-datagridcolumn widthfactor="5">
+                    <vr-datagridcolumn fixedwidth="25">
                         <vr-icon icontype="dataItem.iconType" tooltip="dataItem.iconTooltip"></vr-icon>
                     </vr-datagridcolumn>
 
