Refactoring and implementing execute tax rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41032

--- a/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/MainExtensions/PricingRules/TaxActions/Templates/PricingRulePercentageTaxTemplate.html
+++ b/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/MainExtensions/PricingRules/TaxActions/Templates/PricingRulePercentageTaxTemplate.html
@@ -1,1 +1,6 @@
-﻿<vr-textbox value="ctrl.extraPercentage" type="number" label="Extra Percentage" isrequired minvalue="-100" maxvalue="100"></vr-textbox>
+﻿<vr-columns width="1/2row">
+    <vr-textbox value="ctrl.taxPercentage" type="number" label="Tax Percentage" isrequired minvalue="-100" maxvalue="100"></vr-textbox>
+</vr-columns>
+<vr-columns width="1/2row">
+    <vr-textbox value="ctrl.amountToSkip" type="number" label="Amount To Skip" minvalue="0"></vr-textbox>
+</vr-columns>
