--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Views/ExecutionFlowDefinition/ExecutionFlowStageEditor.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Views/ExecutionFlowDefinition/ExecutionFlowStageEditor.html
@@ -30,6 +30,11 @@
                                         type="number" decimalprecision="0" minvalue="1" maxvalue="10"></vr-textbox>
                         </vr-columns>
 
+                        <vr-columns width="1/3row">
+                            <vr-switch value="scopeModal.isSequential" label="Sequential Processing"
+                                        ></vr-switch>
+                        </vr-columns>
+
                         <vr-columns width="1/3row" ng-show="isDataRecordTypeSelected">
                             <vr-select datasource="scopeModal.sourceStages"
                                        selectedvalues="scopeModal.selectedSourceStages"
