Implementing financial account
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41063

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountSearchTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountSearchTemplate.html
@@ -1,5 +1,5 @@
 ﻿<vr-row removeline vr-loader="scopeModel.isLoading">
-    <vr-columns width="normal" withemptyline>
+    <vr-columns width="normal">
         <vr-button type="Add" standalone data-onclick="scopeModel.addFinancialAccount"></vr-button>
     </vr-columns>
 </vr-row>
