--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountGridTemplate.html
@@ -4,7 +4,7 @@
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
              idfield="FinancialAccountId">
-    <vr-datagridcolumn headertext="'ID'" field="'FinancialAccountId'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'BED'" field="'BED'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'EED'" field="'EED'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'ID'" field="'SequenceNumber'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'" widthfactor="'20'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Date'" widthfactor="'20'"></vr-datagridcolumn>
 </vr-datagrid>
