--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/FinancialAccount/FinancialAccountEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/FinancialAccount/FinancialAccountEditor.html
@@ -3,6 +3,9 @@
         <vr-form name="formFinancialAccountEditor">
             <vr-tabs>
                 <vr-tab header="'Definition'">
+                    <vr-row>
+                        <retail-be-financialaccountdefinition-selector normal-col-num="6" on-ready="scopeModel.onFinancialAccountDefinitionSelectorReady"></retail-be-financialaccountdefinition-selector>
+                    </vr-row>
                 </vr-tab>
                 <vr-tab header="'Time Settings'">
                     <vr-row removeline>
