Implementing financial accounts
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41073

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountDefinitionSettings.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountDefinitionSettings.html
@@ -4,11 +4,12 @@
             <vr-columns width="1/2row">
                 <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
             </vr-columns>
-            <vr-columns width="1/2row">
-                <vr-invoicetype-selector on-ready="scopeModel.onInvoiceTypeSelectorReady" isrequired="true"></vr-invoicetype-selector>
-            </vr-columns>
+            <vr-invoicetype-selector on-ready="scopeModel.onInvoiceTypeSelectorReady" normal-col-num="6"></vr-invoicetype-selector>
+            <vr-accountbalance-accounttype-selector on-ready="scopeModel.onBalanceAccountTypeSelectorReady" normal-col-num="6"></vr-accountbalance-accounttype-selector>
+           
         </vr-row>
     </vr-tab>
     <vr-tab header="'Settings'">
+        <retail-be-financialaccountdefinition-extendedsettings on-ready="scopeModel.onExtendedSettingsDirectiveReady" normal-col-num="6"></retail-be-financialaccountdefinition-extendedsettings>
     </vr-tab>
 </vr-tabs>
