Implementing account definition selector for financial definition and credit class for post paid runtime
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41079

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/MainExtensions/Templates/PostpaidFinancialAccount.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/MainExtensions/Templates/PostpaidFinancialAccount.html
@@ -1,1 +1,3 @@
-﻿
+﻿<vr-row>
+    <retail-be-creditclass-selector on-ready="scopeModel.onCreditClassSelectorReady" normal-col-num="6" isrequired="true"></retail-be-creditclass-selector>
+</vr-row>
