--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountDefinitionSettings.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountDefinitionSettings.html
@@ -4,6 +4,11 @@
             <vr-columns width="1/2row">
                 <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
             </vr-columns>
+            <vr-columns width="1/2row">
+                <vr-genericdata-businessentitydefinition-selector on-ready="scopeModel.onBusinessEntityDefinitionSelectorReady"
+                                                                  customlabel="Account Definition" isrequired="true" hideremoveicon>
+                </vr-genericdata-businessentitydefinition-selector>
+            </vr-columns>
             <vr-invoicetype-selector on-ready="scopeModel.onInvoiceTypeSelectorReady" normal-col-num="6"></vr-invoicetype-selector>
             <vr-accountbalance-accounttype-selector on-ready="scopeModel.onBalanceAccountTypeSelectorReady" normal-col-num="6"></vr-accountbalance-accounttype-selector>
            
