--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/FinancialAccount/FinancialAccountEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/FinancialAccount/FinancialAccountEditor.html
@@ -4,8 +4,11 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <retail-be-financialaccountdefinition-selector normal-col-num="6" on-ready="scopeModel.onFinancialAccountDefinitionSelectorReady"></retail-be-financialaccountdefinition-selector>
+                        <retail-be-financialaccountdefinition-selector normal-col-num="6" on-ready="scopeModel.onFinancialAccountDefinitionSelectorReady" selectedvalues="scopeModel.selectedFinancialAccountDefinition" onselectionchanged="    scopeModel.onFinancialAccountDefinitionSelectionChanged" isrequired="true"></retail-be-financialaccountdefinition-selector>
                     </vr-row>
+                    <vr-directivewrapper ng-if="scopeModel.financialAccountTypeRuntimeDirective != undefined" vr-loader="scopeModel.isLoadingDirective" directive="scopeModel.financialAccountTypeRuntimeDirective"
+                                         on-ready="scopeModel.onDirectiveReady" isrequired="true">
+                    </vr-directivewrapper>
                 </vr-tab>
                 <vr-tab header="'Time Settings'">
                     <vr-row removeline>
