--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/ZoneRoutingProduct/Templates/ZoneRoutingProductGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/ZoneRoutingProduct/Templates/ZoneRoutingProductGridTemplate.html
@@ -10,7 +10,7 @@
     <vr-datagridcolumn fixedwidth="'30'">
         <vr-icon icontype="dataItem.iconType" tooltip="dataItem.iconTooltip"></vr-icon>
     </vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Services'">
+    <vr-datagridcolumn headertext="'Services'" fixedwidth="'70'">
         <vr-whs-be-services-viewer on-ready="dataItem.onServiceViewerReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
