--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Directives/CodePreview/Templates/CodePreparationCodePreviewGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Directives/CodePreview/Templates/CodePreparationCodePreviewGridTemplate.html
@@ -6,7 +6,7 @@
 
     <vr-datagridcolumn headertext="'Code'" field="'Entity.Code'" type="'Text'"></vr-datagridcolumn>
 
-    <vr-datagridcolumn headertext="'Code Change Type'">
+    <vr-datagridcolumn widthfactor="3">
         <vr-icon iconurl="dataItem.codeStatusIconUrl" tooltip="dataItem.codeStatusIconTooltip" inline></vr-icon>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
