--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/AnalyticDataProvider/Templates/AnalyticDataProviderSettings.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/AnalyticDataProvider/Templates/AnalyticDataProviderSettings.html
@@ -13,6 +13,6 @@
 
 
     <vr-directivewrapper ng-if="scopeModel.selectedTemplateConfig != undefined" directive="scopeModel.selectedTemplateConfig.Editor"
-                         on-ready="scopeModel.onDirectiveReady" isrequired="ctrl.isrequired" normal-col-num="{{ctrl.normalColNum}}" customvalidate="ctrl.customvalidate">
+                         on-ready="scopeModel.onDirectiveReady" isrequired="providerCtrl.isrequired" normal-col-num="{{providerCtrl.normalColNum}}" customvalidate="providerCtrl.customvalidate">
     </vr-directivewrapper>
 </vr-row>
