--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Runtime/Templates/AccountTypeOperatorPartRuntimeTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Runtime/Templates/AccountTypeOperatorPartRuntimeTemplate.html
@@ -1,9 +1,7 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<vr-tab header="'Operator Type'">
+    <vr-row removeline>
+        <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.isMobile" label="Is Mobile"></vr-switch>
+        </vr-columns>
+    </vr-row>
+</vr-tab>
