--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/RateCalculation/Templates/FixedRateCalculationTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/RateCalculation/Templates/FixedRateCalculationTemplate.html
@@ -1,5 +1,3 @@
-﻿<vr-row removeline>
-    <vr-columns width="1/2row">
-        <vr-textbox type="number" value="ctrl.fixedRate" label="Fixed Rate" customvalidate="ctrl.validate()" isrequired="ctrl.isrequired"></vr-textbox>
-    </vr-columns>
-</vr-row>
+﻿<vr-columns colnum="{{ctrl.normalColNum / 3}}">
+    <vr-textbox type="number" value="ctrl.fixedRate" label="Fixed Rate" customvalidate="ctrl.validate()" isrequired="ctrl.isrequired"></vr-textbox>
+</vr-columns>
