--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountStatement/Templates/AccountStatementGridTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountStatement/Templates/AccountStatementGridTemplate.html
@@ -1,7 +1,7 @@
 ﻿<vr-row>
     <vr-list maxitemsperrow="4">
        
-        <vr-listitem><vr-label>Current Balance:</vr-label><vr-label isvalue prespace>{{ctrl.currentBalance}}</vr-label></vr-listitem>
+        <vr-listitem><vr-label>Current Balance:</vr-label><vr-label isvalue prespace>{{ctrl.currentBalance}}</vr-label><vr-label isvalue prespace ng-show="ctrl.currentBalance != undefined">({{ctrl.balanceFlagDescription}})</vr-label></vr-listitem>
         <vr-listitem><vr-label>Total Debit:</vr-label><vr-label isvalue prespace>{{ctrl.totalDebit}}</vr-label></vr-listitem>
         <vr-listitem><vr-label>Total Credit:</vr-label><vr-label isvalue prespace>{{ctrl.totalCredit}}</vr-label></vr-listitem>
         <vr-listitem><vr-label>Currency:</vr-label><vr-label isvalue prespace>{{ctrl.currency}}</vr-label></vr-listitem>
@@ -20,4 +20,6 @@
     <vr-datagridcolumn headertext="'Debit'" field="'Debit'" widthfactor="3" type="'Number'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Credit'" field="'Credit'" type="'Number'" widthfactor="3" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Balance'" field="'Balance'" widthfactor="5" type="'Number'" disablesorting></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Balance Type'" invisibleheader="true" field="'BalanceFlagDescription'" widthfactor="2" disablesorting></vr-datagridcolumn>
+
 </vr-datagrid>
