--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Runtime/Templates/AccountTypeOperatorPartRuntimeTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Runtime/Templates/AccountTypeOperatorPartRuntimeTemplate.html
@@ -1,7 +1,7 @@
-﻿<vr-tab header="'Operator Type'">
+﻿<vr-tab header="'Setting'">
     <vr-row removeline>
         <vr-columns width="1/2row">
-            <vr-switch value="scopeModel.isMobile" label="Is Mobile"></vr-switch>
+            <vr-switch value="scopeModel.isMobileOperator" label="Mobile Operator"></vr-switch>
         </vr-columns>
     </vr-row>
 </vr-tab>
