--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ProvisioningScreenedNumbers/Templates/ProvisionAccountRuntimeSettingsTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ProvisioningScreenedNumbers/Templates/ProvisionAccountRuntimeSettingsTemplate.html
@@ -3,3 +3,6 @@
         <vr-textbox value="scopeModel.enterpriseName" label="Enterprise Name" isrequired="true"></vr-textbox>
     </vr-columns>
 </vr-row>
+<retail-teles-provisioner-provisionaccount-settings on-ready="scopeModel.onProvisionAccountSettingsReady"></retail-teles-provisioner-provisionaccount-settings>
+
+
