Changed the option number from a textbox to a selector
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41139

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/RateCalculation/Templates/MarginRateCalculationTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/RateCalculation/Templates/MarginRateCalculationTemplate.html
@@ -22,13 +22,17 @@
                    hideremoveicon>
         </vr-select>
     </vr-columns>
-    <vr-columns colnum="{{ctrl.normalColNum / 3}}" ng-show="scopeModel.showOptionNumber">
-        <vr-textbox type="number"
-                    value="scopeModel.rpRouteOptionNumber"
-                    label="Option Number"
-                    onvaluechanged="scopeModel.onRPRouteOptionNumberChagned"
-                    isrequired="scopeModel.showOptionNumber">
-        </vr-textbox>
+    <vr-columns colnum="{{ctrl.normalColNum / 3}}" ng-show="scopeModel.showOptionNumberSelector">
+        <vr-select on-ready="scopeModel.onOptionNumberSelectorReady"
+                   label="Option Number"
+                   datasource="scopeModel.optionNumbers"
+                   selectedvalues="scopeModel.selectedOptionNumber"
+                   onselectionchanged="scopeModel.onOptionNumberChanged"
+                   datavaluefield="value"
+                   datatextfield="description"
+                   isrequired="scopeModel.showOptionNumberSelector"
+                   hideremoveicon>
+        </vr-select>
     </vr-columns>
     <span ng-show="scopeModel.showSupplierSelector">
         <vr-whs-be-supplier-selector on-ready="scopeModel.onSupplierSelectorReady"
