implementing overridden configuration
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41153

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRuleDefinition/Templates/OverriddenGenericRuleDefinition.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRuleDefinition/Templates/OverriddenGenericRuleDefinition.html
@@ -2,8 +2,8 @@
     <vr-row>
         <vr-columns width="1/2row">
             <vr-genericdata-genericruledefinition-selector on-ready="scopeModel.onGenericRuleDefinitionSelectorReady" isrequired="true"
-                                                           customlabel="'RuleDefinitionSettings'"
-                                                           onselectionchanged="scopeModel.genericRuleDefinitionSelector">
+                                                           customlabel="RuleDefinitionSettings"
+                                                           onselectionchanged="scopeModel.genericRuleDefinitionSelectorSelectionChanged">
                 </<vr-genericdata-genericruledefinition-selector>
         </vr-columns>
     </vr-row>
