--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountPartDefinition/Templates/OverriddenConfigurationAccountPartDefinition.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountPartDefinition/Templates/OverriddenConfigurationAccountPartDefinition.html
@@ -1,11 +1,10 @@
 ﻿<vr-tab header="'AccountPartDefinitionSettings'">
-    <vr-row>
-        <vr-columns width="1/2row">
-            <retail-be-accountpartdefinition-selector on-ready="scopeModel.onAccountPartDefinitionSelectorReady" isrequired="true"
-                                                      customlabel="AccountPartDefinitionSettings"
-                                                      onselectionchanged="scopeModel.accountPartDefinitionSelectorSelectionChanged">
-            </retail-be-accountpartdefinition-selector>
-</vr-columns>
+   <vr-row>
+       <retail-be-accountpartdefinition-selector on-ready="scopeModel.onAccountPartDefinitionSelectorReady" isrequired="true"
+                                                 customlabel="AccountPartDefinitionSettings"
+                                                 normal-col-num="6"
+                                                 onselectionchanged="scopeModel.accountPartDefinitionSelectorSelectionChanged">
+       </retail-be-accountpartdefinition-selector>
     </vr-row>
     <vr-row>
         <vr-columns width="1/2row">
