adding time To Pages
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41165

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierRate/SupplierRateManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierRate/SupplierRateManagement.html
@@ -11,7 +11,7 @@
                 </vr-columns>
 
                 <vr-columns width="normal">
-                    <vr-datetimepicker type="datetime" label="Effective On" value="effectiveOn" isrequired="!IsPending" vr-disabled="IsPending"></vr-datetimepicker>
+                    <vr-datetimepicker type="dateTime" label="Effective On" value="effectiveOn" isrequired="!IsPending" vr-disabled="IsPending"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns>
                     <vr-switch value="IsPending" label="Show Pending Rates" onvaluechanged="resetDate"></vr-switch>
