--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRTile/VRTileManagement.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRTile/VRTileManagement.html
@@ -1,11 +1,9 @@
 ﻿<vr-panel ng-controller="VRCommon_VRTileManagementController">
-    <vr-form validationcontext="VRTileManagementForm">
+    <vr-form name="formFilter">
         <vr-row ng-if="scopeModel.vrTiles.length > 0">
-            <div class="list-group ">
-                <vr-columns ng-repeat="vrTile in scopeModel.vrTiles" colnum="2">
-                    <vr-directivewrapper directive="vrTile.Settings.ExtendedSettings.RuntimeDirective" title="vrTile.Name" on-ready="vrTile.onVRTileDirectiveReady"></vr-directivewrapper>
+                <vr-columns ng-repeat="vrTile in scopeModel.vrTiles" colnum="4">
+                    <vr-directivewrapper directive="vrTile.runtimeEditor" title="vrTile.name" on-ready="vrTile.onVRTileDirectiveReady"></vr-directivewrapper>
                 </vr-columns>
-            </div>
         </vr-row>
     </vr-form>
 </vr-panel>
