Refactored the UI
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41178

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
@@ -40,7 +40,7 @@
                              maxheight="100px"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Rate'" field="'Entity.CalculatedRate'" type="'Number'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn widthfactor="5" disablesorting></vr-datagridcolumn><!-- Added to create padding between the Rate column and the edge of the grid -->
                 </vr-datagrid>
             </vr-columns>
@@ -57,7 +57,7 @@
                              maxheight="100px"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Rate'" field="'Entity.CalculatedRate'" type="'Number'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn widthfactor="5" disablesorting></vr-datagridcolumn><!-- Added to create padding between the Rate column and the edge of the grid -->
                 </vr-datagrid>
             </vr-columns>
