--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/ImportValidationResultTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/ImportValidationResultTemplate.html
@@ -8,7 +8,8 @@
                  hidegridmenu>
         <vr-datagridcolumn headertext="'Row Index'" field="'Entity.RowIndex'" type="'Text'" disablesorting></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Zone'" field="'Entity.ImportedRow.Zone'" type="'Text'" disablesorting></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Rate'" field="'Entity.ImportedRow.Rate'" type="'Text'" disablesorting></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Rate'" field="'Entity.ImportedRow.Rate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
+        <vr-datagridcolumn widthfactor="5" disablesorting></vr-datagridcolumn><!-- Added to create some spacing between the columns -->
         <vr-datagridcolumn headertext="'Effective Date'" field="'Entity.ImportedRow.EffectiveDate'" type="'Date'" widthfactor="20" disablesorting></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Error Message'" field="'Entity.ErrorMessage'" type="'Text'" widthfactor="60" disablesorting></vr-datagridcolumn>
     </vr-datagrid>
